hotfix: CORS disabled for no troubles with Vite port